Update for windows debugging for POM and build.yml